# LLMGuard-Offline-Prompt-Injection-Data-Leak-Detector

./: LICENSE  README.md  pyproject.toml
benchmarks/: red_team_suite.json
datasets/: README.md  download_datasets.sh
docs/: methodology.md  threat_model.md
examples/sample_logs/: sample1.txt  sample2.txt
src/llmguard/: __init__.py  cli.py  detectors.py  ml.py  pii.py  reporting.py  scanning.py
