[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmguard"
version = "0.1.0"
description = "Offline prompt injection & data leak detector"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "LLMGuard Maintainers"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

dependencies = []

[project.optional-dependencies]
ml = ["scikit-learn>=1.3.0"]

[project.scripts]
llmguard = "llmguard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
